# sphinx-systemverilog

./: .envrc  .gitignore  README.md  cspell.json  ivpm.yaml  pyproject.toml
.github/workflows/: ci.yml
assets/icons/: README.md
docs/: conf.py  getting-started.md  index.md
docs/design/: competitive-landscape.md  implementation-plan.md  sphinx-systemverilog-design.md
docs/examples/: naturaldocs.md  sample.md  uvm.md
docs/usage/: advanced.md  cross-referencing.md  diagrams.md  directives.md  doxygen-style.md  modules.md  native-style.md  naturaldocs-style.md  whole-tree.md
src/sphinx_systemverilog/: __init__.py  config.py  domain.py  viewcode.py
src/sphinx_systemverilog/autodoc/: __init__.py  diagrams.py  directives.py  documenters.py
src/sphinx_systemverilog/docparse/: __init__.py  base.py  doxygen.py  inline.py  native.py  naturaldocs.py
src/sphinx_systemverilog/model/: __init__.py  builder.py  comments.py  index.py  locations.py  ndblocks.py  objects.py
tests/: conftest.py  test_setup.py
tests/autodoc/: test_autosv.py  test_autosvsummary.py  test_inherited.py  test_optional.py  test_xref.py
tests/corpus/: test_uvm_smoke.py
tests/docparse/: test_autodetect.py  test_doxygen.py  test_native.py  test_naturaldocs.py
tests/domain/: test_directives.py  test_inheritance_diagram.py  test_instance_diagram.py  test_intersphinx.py  test_viewcode.py
tests/fixtures/sv/: counter.sv  cov_pkg.sv  (+5 more)
tests/model/: test_association.py  test_builder.py  test_cache.py  test_comments.py  test_coverage_constructs.py  test_elaboration.py  test_index.py  test_locations.py  test_macros.py  test_modules.py  test_parameterized.py
(+13 files in other folders)
