[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-systemverilog"
version = "0.0.1"
description = "Sphinx autodoc extension for SystemVerilog, powered by the pyslang parser"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Matthew Ballance", email = "matt.ballance@gmail.com" },
]
keywords = ["sphinx", "systemverilog", "autodoc", "documentation", "pyslang", "uvm"]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "sphinx>=7.0",
    "pyslang>=7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "beautifulsoup4"]
docs = ["myst-parser"]
dev = ["pytest>=8.0", "beautifulsoup4", "myst-parser"]

[project.urls]
Homepage = "https://github.com/fvutils/sphinx-systemverilog"
Repository = "https://github.com/fvutils/sphinx-systemverilog"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sphinx_systemverilog = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: pure-Python tests with no Sphinx app (model, docparse)",
    "sphinx: integration tests using sphinx.testing against tests/roots",
    "corpus: slow tests run over the UVM source corpus",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
